@startuml Vuelo

class FlightRouteApp {
  -flight_data: FlightData
  -route_search: RouteSearchs
  +find_all_routes(origin: str)
  +find_route(origin: str, destination: str)
}

class FlightData {
  -capitals: List[City]
  -routes: List[Route]
  +load_capitals()
  +load_routes()
  +get_city_by_code(code: str)
}

class City {
  -name: str
  -country: str
  -latitude: float
  -longitude: float
  -airport_code: str
  +distance_to(city: City)
}

class Route {
  -origin: City
  -destination: City
  -distance: float
  +calculate_distance()
}

class RouteSearch {
  -flight_data: FlightData
  +shortest_path(origin: str, destination: str)
  +shortest_paths_to_all(origin: str)
}

FlightRouteApp -- FlightData : uses
FlightRouteApp -- RouteSearch : uses
FlightData -- City : contains
FlightData -- Route : contains
Route -- City : connects

@enduml